# argexec

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
.github/workflows/: publish.yaml  push.yml
argexec/: __init__.py  _decorator.py  _docstring.py
argexec/types/: __init__.py  _default.py  _log_level.py
