[metadata]
name=argexec
description=Expose your Python functions to the command line with one easy step!
version=1.0.1
url=https://github.com/XevoInc/argexec
long_description=file: README.md,
long_description_content_type=text/markdown
author=Ryan Rowe
author_email=rrowe@xevo.com
license=Apache License, Version 2.0
license_file=LICENSE
python_requires=>=3.7
classifiers=
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
  Typing :: Typed

[options]
setup_requires =
  # Minimal version with most `setup.cfg` bug fixes.
  setuptools >= 38.3.0
packages = argexec
test_suite = tests
install_requires =
  dynamic_dispatch
  typeguard >= 2.9.1
  typing_extensions; python_version < '3.8'

[options.extras_require]
dev =
  flake8
  twine

[flake8]
ignore = F401, F403
max-line-length = 120
